[gd_scene load_steps=14 format=2]

[ext_resource path="res://RotF/Scripts/Spider.gd" type="Script" id=1]
[ext_resource path="res://RotF/SpriteSheet/Spider/SpinneBild.png" type="Texture" id=2]
[ext_resource path="res://RotF/Animations/SpiderMoving.tres" type="Animation" id=3]
[ext_resource path="res://RotF/SpriteSheet/Spider/parts/FlyFertigTiles_0008_Pupillen.png" type="Texture" id=4]
[ext_resource path="res://RotF/SpriteSheet/Spider/parts/FlyFertigTiles_0002_r3.png" type="Texture" id=5]
[ext_resource path="res://RotF/Sounds/splatter3.wav" type="AudioStream" id=6]
[ext_resource path="res://RotF/Sounds/splatter1.wav" type="AudioStream" id=7]
[ext_resource path="res://RotF/Sounds/splatter2.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 35.0735

[sub_resource type="CircleShape2D" id=2]
radius = 10.6281

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 27.19
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.2
angular_velocity = 20.0
angular_velocity_random = 0.53
orbit_velocity = 0.02
orbit_velocity_random = 0.21
linear_accel = -4.0
linear_accel_random = 0.33
angle = 121.7
angle_random = 1.0
scale = 0.16
scale_random = 0.08

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
angular_velocity = 20.0
angular_velocity_random = 0.77
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -1.0
angle = -90.0
scale = 0.2

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 12.77
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
angular_velocity = 20.0
angular_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -2.0
angle = 28.5
angle_random = 0.57
scale = 3.0
scale_random = 0.45
color = Color( 0.380392, 0, 0, 1 )
hue_variation = 0.05
hue_variation_random = 0.67

[node name="Spider" type="Area2D" groups=[
"Spiders",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
vframes = 30

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "SpiderMoving"
anims/SpiderMoving = ExtResource( 3 )

[node name="DeadlyCenter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadlyCenter"]
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
lifetime = 2.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.93
randomness = 0.1
process_material = SubResource( 3 )
texture = ExtResource( 5 )

[node name="Particles2D2" type="Particles2D" parent="."]
emitting = false
amount = 1
lifetime = 2.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.71
randomness = 0.1
visibility_rect = Rect2( -100, -100, 199.462, 200 )
process_material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="Particles2D3" type="Particles2D" parent="."]
emitting = false
amount = 30
lifetime = 3.0
one_shot = true
speed_scale = 2.5
explosiveness = 0.81
randomness = 0.4
process_material = SubResource( 5 )

[node name="KillSound0" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -18.0

[node name="KillSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -18.0

[node name="KillSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -18.0
[connection signal="area_entered" from="." to="." method="_on_Spider_area_entered"]
[connection signal="area_entered" from="DeadlyCenter" to="." method="_on_DeadlyCenter_area_entered"]
